--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -97,12 +97,9 @@ jobs:
 
   # Run e2e tests
   e2e:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
     needs: [ "validate", "token", "find-tf-releases", "list-examples" ]
     runs-on: k8s-large
     environment: default
-    continue-on-error: true
     permissions:
       id-token: write
     strategy:
@@ -167,21 +164,11 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
-        run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
-
   # Run e2e tests
   upgrade:
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-    needs: [ "validate", "token", "find-tf-releases", "list-examples", "e2e", "import" ]
+    needs: [ "validate", "token", "find-tf-releases", "list-examples" ]
     runs-on: k8s-large
     environment: default
-    continue-on-error: true
     permissions:
       id-token: write
     strategy:
@@ -247,12 +234,6 @@ jobs:
           azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
           azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Mark error
-        id: status
-        if: failure()
-        run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
 
   # Run import tests
   import:
@@ -260,7 +241,6 @@ jobs:
       status: ${{ steps.status.outputs.status }}
     needs: [ "token", "find-tf-releases" , "e2e"]
     runs-on: k8s-large
-    continue-on-error: true
     permissions:
       id-token: write
     strategy:
@@ -269,11 +249,22 @@ jobs:
       matrix:
         tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
         cloud_provider: [ "aws", "azure", "gcp" ]
+        test_name : ["generic"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Generate service name
+        uses: ./.github/actions/generate-service-name
+        id: service_name
+        with:
+          test_type: import
+          test_name: ${{ matrix.test_name }}
+          tf_release: ${{ matrix.tf_release }}
+          cloud_provider: ${{ matrix.cloud_provider }}
+          token: ${{ needs.token.outputs.token }}
 
       - name: Get API details for env
         id: credentials
@@ -293,26 +284,20 @@ jobs:
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
           token_secret: ${{ steps.credentials.outputs.api_key_secret }}
-          resource_name: "[import]-${{ matrix.tf_release }}-${{ matrix.cloud_provider }}-${{ needs.token.outputs.token }}"
+          service_name: ${{steps.service_name.outputs.service_name}}
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.cloud_provider }}
           region: ${{ steps.credentials.outputs.region }}
 
-      - name: Mark error
-        id: status
-        if: failure()
-        run: |
-          echo "status=failure" >> "${GITHUB_OUTPUT}"
-          exit 1
 
   report:
     runs-on: k8s-nano
     needs: [ "e2e", "import", "upgrade" ]
-    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
+    if: always()
     steps:
       - name: Report Failure on slack
+        if: ${{ needs.e2e.result == 'failure' || needs.import.result == 'failure' || needs.upgrade.result == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
-        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: 'failure'
@@ -320,10 +305,6 @@ jobs:
           footer: "{run_url}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-      - name: Report error on github UI
-        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
-        run: |
-          exit 1
 
   # Delete any leftover service that might have failed deleting
   cleanup:
@@ -356,7 +337,7 @@ jobs:
   # Bump the provider version in the examples directory
   bump-examples:
     needs: [ "validate", "e2e", "import", "upgrade" ]
-    if: ${{ needs.e2e.outputs.status != 'failure' && needs.import.outputs.status != 'failure' && needs.upgrade.outputs.status != 'failure' }}
+    if: ${{ needs.e2e.result != 'failure' && needs.import.result != 'failure' && needs.upgrade.result != 'failure' }}
     runs-on: k8s-small
     permissions:
       contents: write
@@ -430,7 +411,7 @@ jobs:
       contents: write
       pull-requests: write
     needs: [ "e2e", "import", "upgrade", "bump-examples" ]
-    if: ${{ needs.e2e.outputs.status != 'failure' && needs.import.outputs.status != 'failure' && needs.upgrade.outputs.status != 'failure' }}
+    if: ${{ needs.e2e.result != 'failure' && needs.import.result != 'failure' && needs.upgrade.result != 'failure' }}
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -448,7 +429,7 @@ jobs:
       contents: write
     runs-on: k8s-medium
     needs: [ "validate", "tag", "e2e", "import", "upgrade" ]
-    if: ${{ needs.e2e.outputs.status != 'failure' && needs.import.outputs.status != 'failure' && needs.upgrade.outputs.status != 'failure' }}
+    if: ${{ needs.e2e.result != 'failure' && needs.import.result != 'failure' && needs.upgrade.result != 'failure' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
